--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/Parte3.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/Parte3.tex
@@ -35,9 +35,10 @@
 
 % Definición de la primera parte del manual
 
-\partTitle{Aplicación en electroencefalografía}
+\partTitle{Testeo y conclusiones}
 
-\partDesc{Esta parte de la tesis se dedica a desarrollar los casos de aplicación elegidos como prueba del framework implementado. Para ello, se explican conceptos básicos de las dos problemáticas de electroencefalografía elegidas (\textit{Potencial P300} y \textit{Habla imaginada}), y por cada una se especifica cómo son los datos utilizados y cuál es el tratamiento que recibieron en este trabajo. Luego se presentan los resultados obtenidos para cada caso de aplicación, detallando conclusiones acerca de los mismos.}
+\partDesc{En esta última parte de la tesis se mostrarán los test realizados para corroborar el correcto funcionamiento de los productos desarrollados.
+Además, se dará un cierre al trabajo expresando las conclusiones abordadas y las posibles mejores a realizarse en un futuro.}
 
 \partBackText{}
 
