--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo2.bib
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo2.bib
@@ -172,3 +172,17 @@
 	howpublished = {\url{https://developers.google.com/android/reference/com/google/android/gms/location/LocationServices}},
 	note = {Accedido: 16/02/2019}
 }
+
+@misc{junit,
+	title = {JUnit},
+	author = {JUnit},
+	howpublished = {\url{https://junit.org/junit5/}},
+	note = {Accedido: 24/02/2019}
+}
+
+@misc{jacoco,
+	title = {Jacoco},
+	author = {Jacoco},
+	howpublished = {\url{https://www.jacoco.org/jacoco/trunk/doc/}},
+	note = {Accedido: 24/02/2019}
+}
