--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/03Capitulo0.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/03Capitulo0.tex
@@ -1,90 +1,76 @@
 %---------------------------------------------------------------------
 %
-%                          Capítulo 6
+%                          Capítulo 5
 %
 %---------------------------------------------------------------------
 
-\chapter{Electroencefalografía}
-
-\begin{FraseCelebre}
-\begin{Frase}
-Todo hombre puede ser, si se lo propone, escultor de su propio cerebro.
-\end{Frase}
-\begin{Fuente}
-Santiago Ramón y Cajal
-\end{Fuente}
-\end{FraseCelebre}
+\chapter{Testing}
 
 \begin{resumen}
-Este capítulo pretende introducir brevemente los conceptos manejados en cada caso de aplicación realizado. Específicamente, se puntualiza sobre la electroencefalografía y su uso para construir interfaces cerebro-humano, destacando así la motivación principal para llevar a cabo las aplicaciones del presente trabajo de tesis.
+	En este capítulo se presentarán las distintas pruebas de verificación y validación ejecutadas sobre el Web Service y la aplicación Android, así como tambien las configuraciones realizadas para entornos de pruebas locales.
 \end{resumen}
 
-
 %-------------------------------------------------------------------
-\section{Señales de electroencefalograma}
+\section{Pruebas automáticas de software}
 %-------------------------------------------------------------------
-\label{cap6:sec:eeg}
+\label{cap5:sec:pruebasautomaticas}
 
-La electroencefalografía (\acs{EEG}) consiste en el registro de la actividad cerebral de un individuo, la cual es captada mediante electrodos como señales eléctricas producidas por un conjunto de neuronas en un período de tiempo. El primer registro de actividad espontánea cerebral fue realizado en 1875 por Richard Canton, quien mediante un galvanómetro pudo observar impulsos eléctricos medidos sobre la superficie del cerebro de un animal. En 1924, Hans Berger registra el primer electroencefalograma de un humano mediante el uso de tiras metálicas pegadas sobre el cuero cabelludo y utilizando también un galvanómetro como elemento de medida. Durante dicho procedimiento pudo medir el patrón irregular y de poca amplitud de la señal de electroencefalograma, generando las bases para el desarrollo de la electroencefalografía \cite{coretto2016imaginada}.
+En esta etapa se realizaron distintas pruebas de verificación y validación tanto para el Web Service como para la aplicación Android, poniendo mayor énfasis en el primero, teniendo en cuenta que es el componente primordial para realizar las principales funcionalidades dentro de la aplicación.
+\\
 
-Existen dos modalidades en que se puede registrar la actividad del cerebro, según la técnica utilizada para la medición: invasiva y no invasiva \cite{abaitua2012procesado}. Las técnicas invasivas, como el electrocortigrama (ECoG), utilizan micro electrodos implantados en el cerebro que miden la actividad de las neuronas, individualmente consideradas. En cambio, la electroencefalografía es una técnica no invasiva que indica la actividad eléctrica del cerebro medida con electrodos superficiales colocados sobre el cuero cabelludo, con lo cual se proporciona información detallada sobre la actividad local de pequeñas regiones cerebrales. Se caracteriza por captar señales de pequeñísima amplitud y de gran variabilidad en el tiempo, así como por tener un valor pobre de relación señal/ruido o \ac{SNR}, y su instrumentación de adquisición es de fácil colocación y bajo costo.
+Éste proceso de análisis y pruebas tienen las siguientes finalidades:
 
-Generalmente el conjunto de electrodos que registran la señal de EEG se ubica en forma directa sobre el cuero cabelludo siguiendo el sistema internacional 10-20, denominado así porque los electrodos están espaciados entre el 10\% y el 20\% de la distancia total entre puntos reconocibles del cráneo. Actualmente se utilizan unos gorros que llevan incorporados los electrodos, a cada uno de los cuales se les introduce un gel conductor que facilita la recepción de la señal a través del cuero cabelludo. Los electrodos se unen en un conector
-y éste se conecta con el cabezal del EEG, lugar donde se recoge toda la actividad eléctrica y se envía al sistema de amplificadores para su trascripción a datos digitales.
-
-
-%-------------------------------------------------------------------
-\section{Interfaces Cerebro-Computadora}
-%-------------------------------------------------------------------
-\label{cap6:sec:icc}
-
-%Se puede usar esto http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3304110/
-
-Una interfaz cerebro-computadora o ICC (en inglés, conocida como \textit{Brain Computer Interface} o \acs{BCI}) es un sistema que permite a una persona la comunicación y control de su entorno sin necesidad de usar nervios o músculos. Esta registra la actividad cerebral de un sujeto para traducirla en comandos sobre una computadora. Es por ello que tiene gran utilidad en aplicaciones de robótica, videojuegos, y especialmente en salud neurológica al ser la única posibilidad de comunicarse para personas con discapacidades motrices. En cuanto a la toma de datos, los métodos no invasivos son más atractivos ya que son más fáciles de implementar en pacientes y además han demostrado tener efectividad comparable a la de aquellas interfaces con electrodos implantados cuando se utilizan algoritmos apropiados de aprendizaje maquinal \cite{wolpaw2004control}.
-
-Los sistemas \acs{BCI} no son lectores de mente. Están diseñados para reconocer patrones en datos extraídos del cerebro (e.g. pensamientos o estados mentales) y asociarlos con comandos, pero eso no significa que sea capaz de leer una mente. Según Forslund \cite{forslund2003neural}, no existe forma de que un sistema técnico pueda actualmente informar \textit{qué piensa una persona}, y hay varias razones para ello:
-\begin{enumerate}
-	\item Las técnicas de sensado que se usan para extraer información del cerebro son imprecisas, y pueden representar sólo una microscópica fracción del total de actividad cerebral.
-	\item Incluso si fuera posible extraer los estados de todas las células en el cerebro, esa información sería muy compleja de manejar, aún para la más poderosa súper computadora.
-	\item Los cerebros son únicos e individuales. Aunque dos personas piensen exactamente lo mismo, la actividad cerebral que se manifiesta es completamente diferente. 
-\end{enumerate}
-
-Aclarado esto, se puede entender a un sistema BCI como un traductor de actividad cerebral en ciertos comandos definidos, por lo cual se compone de los siguientes módulos:
 \begin{itemize}
-	\item Sensado de datos cerebrales en el sujeto y filtrado o mejora de la calidad de las señales.
-	\item Extracción de características relevantes para la tarea del sistema.
-	\item Clasificación del fenómeno registrado desde el cerebro.
-	\item Traducción en movimiento o control de un dispositivo, y retroalimentación al sujeto en cuestión.
+	
+	\item Comprobar que el sistema funciona tal y como se ha especificado en la etapa de requerimientos, satisfaciendo los mismos.
+	
+	\item Detección de comportamientos inesperados, defectuosos o que no cumplen la especificación inicial.
+	
+	\item Corresponder a las buenas prácticas de ingeniería de software, las cuales permiten desarrollar un producto que asegure calidad tanto en su despliegue como en la integración.
+	
 \end{itemize}
 
-\begin{figure}[t]
+Logrando de ésta forma responder ¿Estamos construyendo el producto correcto? ¿Estamos construyendo el producto correctamente?
+\\
+
+Para ello se realizaron pruebas de software inicialmente sobre el Web Service, mediante la utilización de distintas tecnologías que permitan testear cada uno de las funcionalidades implementadas y posteriormente la correcta integración con la aplicación Android. 
+\\
+
+Se implementaron testing automatizados principalmente sobre los distintos controladores del WS, ya que por la arquitectura definida inicialmente, cada uno de ellos invocará internamente a un servicio correspondiente, y éste a su vez a un DAO (capa de datos). Mediante la utilización de los frameworks \textit{\textbf{JUnit}} y \textit{\textbf{Mockito}} se realizaron pruebas unitarias de los controladores, lo cual tiene como característica evaluar el correcto funcionamiento de un módulo en forma aislada, es decir se va probando de a pequeñas porciones de código donde la ejecución es más rápida. Para ello se establece un escenario posible con datos de entrada ejecutando las acciones de cada módulo en forma separada y corroborando el comportamiento esperado en las salidas de cada una de ellas \cite{junit}. 
+\\
+
+La forma de trabajar que posee JUnit sobre cada prueba unitaria es mediante la anotación \textit{@Test}. Dentro de cada uno de ellos se invoca a una funcionalidad de un determinado controlador, pasándole \textbf{datos estáticos} de entrada en la request y simulando objetos gracias a Mockito. El valor de retorno esperado se evalúa mediante afirmaciones ``\textit{asserts...}'' (Ej. assertNull, assertFalse, assertThrows), informando si la clase cumple con la especificación y retornando JUnit si el método pasó el caso de prueba o falló. 
+\\
+
+Luego sobre el WS se utilizó el servicio de \textit{\textbf{Jacoco}} (Java Code Coverage), el cual permite cuantificar el porcentaje de código fuente ejecutado en los distintos test en conjunto. De esta forma se determina la cantidad de código que es cubierto en las pruebas, lo cual es útil para la depuración de errores o detectar malas definiciones en los módulos del software \cite{jacoco}. Por lo tanto, en las distintas pruebas JUnit se tuvieron en cuenta las distintas entradas a colocar para que la cobertura cumpla con la mayor cantidad posible. 
+\\
+
+Como se puede ver en la Figura \ref{fig:coverage} se logró llegar a un 85\% de cobertura en el total del software, donde las principales funcionalidades dentro de los controladores, servicios y daos se encuentran totalmente cubiertos.
+
+\begin{figure}[h!]
 	\begin{center}
-		\includegraphics[width=\textwidth]%
-		{Imagenes/Bitmap/diagrama-bci}
-		\caption{Diagrama en bloques del funcionamiento de un BCI.}
-		\label{fig:bci-neural}
+		\includegraphics[width=1\textwidth]%
+		{Imagenes/Bitmap/coverage1}
+		\caption{Code coverage Web Service}
+		\label{fig:coverage}
 	\end{center}
 \end{figure}
 
-En la Figura \ref{fig:bci-neural} se puede visualizar el diagrama en bloques descripto. Dado que en este trabajo los modelos se basan en redes neuronales profundas, se propone como parte de un único bloque a las tareas de extracción de características y clasificación, ya que este tipo de modelo se encargaría de todo esto tal como se ha anticipado en la Sección \ref{cap2:sec:deeplearning}. Es por ello que para los casos de aplicación tratados se propuso como alcance que los experimentos se realicen sobre datos crudos de electroencefalografía, sin ninguna extracción de características previa. Con ello se sigue la idea de otros trabajos en aprendizaje profundo \cite{bengio2009learning}\cite{le2013building}\cite{erhan2010does}, en donde se espera que la red neuronal sea capaz de aprender a extraer las características sobre la entrada. %(feature learning)
-% https://en.wikipedia.org/wiki/Feature_learning
+Como ya se ha mencionado anteriormente, el SDK de Android está basado en Java, por lo tanto, también fue posible realizar pruebas unitarias mediante la utilización de JUnit. En éste caso el foco principal de testing se basó en la integración de los distintos componentes tanto para la comunicación interna de los eventos en la aplicación como para la externa (comunicación con el WS). La metodología de trabajo es exactamente igual que la realizada anteriormente, colocando distintas entradas en las ejecuciones y evaluando los distintos resultados.
 
-Por lo tanto, para estas aplicaciones se pretende probar el desempeño de los modelos construidos mediante el framework desarrollado, y así corroborar la aptitud para facilitar o resolver problemas complejos como el comprendido en construir sistemas BCI mediante electroencefalografía.
+%-------------------------------------------------------------------
+\section{Pruebas de usuario}
+%-------------------------------------------------------------------
+\label{cap5:sec:pruebasmanuales}
 
+Finalmente se llevaron a cabo distintas pruebas manuales a ``nivel usuario''. Para poder llevar adelante estos casos de prueba, se simuló un servidor en la red local de trabajo. Para esto, se desplegó el Web Service en forma local, configurado para trabajar en una dirección IP fija y privada, en la cual se encuentra alojado el servidor de aplicaciones. Fue necesaria la configuración del DHCP del router para que se asigne siempre la misma IP a ese servidor, a partir de su MAC Address.
+\\
 
-\iffalse
+Con el WS corriendo en la red, y el despliegue de la aplicación Android sobre un dispositivo móvil, se procedió a realizar testing sobre todos los componentes ya sea de manera individual e integrada, verificando el funcionamiento conjunto de los mismos. Se tuvieron en cuenta los distintos escenarios posibles a la hora de las pruebas, como puede ser la falta de conexión móvil, geolocalización, almacenamiento, vinculación y funcionamiento del WS, informando al usuario ante cada falla producida. También se verificó su uso con la utilización de WiFi y datos móviles, comparando y verificando el tiempo de respuesta en conexiones.
+\\
 
- DE FONSOFT:
+Además, se realizaron pruebas sobre distintos dispositivos móviles Android, en diferentes versiones y resoluciones para verificar la adaptabilidad a cada uno de ellos, se produjo la utilización de la aplicación sobre distintos dispositivos de forma simultanea para verificar el correcto funcionamiento y conexión con el WS.
 
-Actualmente para la construcción de ICC se invierte mucho tiempo y recursos en el procesamiento e interpretación de las señales electroencefalográficas, que luego es difícil de llevar a dispositivos para traducir dichas señales en comandos con la precisión requerida y en tiempo real. La ventaja de modelar ICC con redes neuronales profundas es que, una vez encontrado el mejor modelo, es muy sencillo trasladarlo a un dispositivo (mediante chips electrónicos, o de forma más sencilla con Arduino) y el funcionamiento en tiempo real que logra hace posible maximizar la tasa de transferencia de información entre este y el usuario
-
-
-\fi
-
-% Variable local para emacs, para  que encuentre el fichero maestro de
-% compilación y funcionen mejor algunas teclas rápidas de AucTeX
-%%%
-%%% Local Variables:
-%%% mode: latex
-%%% TeX-master: "../Tesis.tex"
-%%% End:
+\newpage
+\thispagestyle{empty}
+\mbox{ }
