--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Tesis.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Tesis.tex
@@ -134,14 +134,14 @@ constantes,guionado,Cascaras/bibliografia,config%
 \mainmatter
 \restauraCabecera
 
-%\include{Capitulos/Parte1}
-%\include{Capitulos/01Capitulo1}
-%\include{Capitulos/01Capitulo2}
-%\include{Capitulos/Parte2}
-%\include{Capitulos/02Capitulo1}
-%\include{Capitulos/02Capitulo2}
-%\include{Capitulos/Parte3}
-%\include{Capitulos/03Capitulo0}
+\include{Capitulos/Parte1}
+\include{Capitulos/01Capitulo1}
+\include{Capitulos/01Capitulo2}
+\include{Capitulos/Parte2}
+\include{Capitulos/02Capitulo1}
+\include{Capitulos/02Capitulo2}
+\include{Capitulos/Parte3}
+\include{Capitulos/03Capitulo0}
 \include{Capitulos/03Capitulo1}
 %\include{Capitulos/03Capitulo2}
 %\include{Capitulos/Parte4}
